--- a/README
+++ b/README
@@ -11,7 +11,7 @@ model BATTLE
  - winner
  - loser
  belongs_to :winner, :class_name => 'Contender', :foreign_key => "winner_id"
- belongs_to :loser, :class_name => 'Contender', :foreign_key => "winner_id"
+ belongs_to :loser, :class_name => 'Contender', :foreign_key => "loser_id"
  - voter?
  
  
