uname unique validation

--- a/README
+++ b/README
@@ -8,5 +8,5 @@ Before production:
  - tweet button with bitly link and revised text
  - hat promo
  - lock down security of methods
- - model validation (not nulls)
+ - model validation (not nulls) √
  
